<resources>
    <string name="app_name">Vehicle_Dues</string>
    <string name="gender">Gender</string>
    <string name="enter_amount">Enter amount</string>
    <string name="pay">Pay</string>
    <string name="enter_description">Enter description</string>
    <string name="amount">Amount</string>
    <string name="_5">5</string>
    <string name="riajoshi318_okaxis">riajoshi318@okaxis</string>
    <string name="upi_id">UPI ID</string>
    <string name="note">Note</string>
    <string name="test_upi_payment">Test UPI Payment</string>
    <string name="pay_now">Pay Now</string>
    <string name="ria_joshi">ria joshi</string>
    <string name="name">Name</string>
</resources>